Fix list spacing
Remove redundant styling and move relevant styles together.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -46,10 +46,6 @@ main
 main > p, main > div
   padding: 0 .8rem
 
-main > ul, main > ol
-  padding-left: 2.3rem // 1.5 + .8
-  padding-right: .8rem
-
 h1, h2, h3, h4, h5, h6
   font-weight: 600
   margin-bottom: 0
@@ -113,10 +109,11 @@ pre
   overflow-x: scroll
 
 ul, ol
-  padding-left: 0
-
-li
+  padding-left: .8rem
   list-style-position: inside
+
+.contents > ol
+  padding-left: 0
 
 li + li
   padding-top: .8rem
